[gd_scene load_steps=2 format=3 uid="uid://ptiiymy41562v"]

[ext_resource type="Script" path="res://algorithms/datastructures/hash_maps/HashMaps.gd" id="1_hash_maps"]

[node name="HashMaps" type="Node3D"]
script = ExtResource("1_hash_maps")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 10, 10)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 12, 0)
light_energy = 1.5

[node name="HashBuckets" type="Node3D" parent="."]

[node name="CollisionChains" type="Node3D" parent="."]

[node name="HashFunction" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0)
size = Vector3(2, 0.5, 1)

[node name="LoadFactorIndicator" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, -3, 0)
top_radius = 0.2
bottom_radius = 0.2
height = 1.0

[node name="CollisionIndicator" type="CSGSphere3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, -3, 0)
radius = 0.3
